# wasi-http-tests

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs
wit/: world.wit
